--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -38,11 +38,17 @@
         margin-right: 10px;
     }
 }
-.logout {
+.logoutSvg {
     width: 16px;
     height: 16px;
 }
-.logoutText {
+.logoutBtn {
+    width: 66px;
+    height: 36px;
+    background-color: transparent;
+    border: none;
+    border-left: 1px solid #e0e5eb;
+    cursor: pointer;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.167;
@@ -57,10 +63,5 @@
     line-height: 1.167;
     color: var(--main-txt-color);
     letter-spacing: 0.04em;
-    margin-right: 20px;
-}
-.stick {
-    border-left: 1px solid #e0e5eb;
-    height: 36px;
     margin-right: 20px;
 }
