--- a/src/components/CurrentPeriod/CurrentPeriod.module.css
+++ b/src/components/CurrentPeriod/CurrentPeriod.module.css
@@ -1,16 +1,37 @@
-/* .reviewMonth {
+.reviewMonth {
+    font-size: 12px;
+    line-height: 1.17;
+    display: table-header-group;
+    height: 39px;
+    align-items: center;
+    margin-left: auto;
 }
+
 .titleReviewMonth {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: rgba(82, 85, 95, 0.7);
+    margin-bottom: 5px;
 }
 
 .reviewMonthWrapper {
-}
-
-.ArrowBackIos {
-}
-
-.ArrowForwardIos {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    text-align: 1.17;
 }
 
 .reviewMonthTitle {
-} */
+    width: 110px;
+    height: 20px;
+    text-transform: uppercase;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+}
