--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,37 +1,3 @@
-@media screen and (min-width: 768px) {
-    .formRegistr {
-        z-index: 4;
-        width: 436px;
-        height: 535px;
-        top: -64%;
-        padding: 50px 85px 53px 85px;
-    }
-    .fontText {
-        margin: 5px 0 0 225px;
-        font-size: 16px;
-        line-height: 19px;
-    }
-    .promtText {
-        font-size: 12px;
-        line-height: 14px;
-        margin-bottom: 20px;
-        text-align: left;
-    }
-    .labelText {
-        font-size: 12px;
-        line-height: 14px;
-    }
-}
-@media screen and (min-width: 1280px) {
-    .formRegistr {
-        margin: 0;
-        width: 436px;
-        min-height: 535px;
-        top: -409px;
-        left: 75%;
-    }
-}
-
 .formRegistr {
     position: absolute;
     left: 50%;
@@ -60,40 +26,6 @@
     color: #52555f;
     margin-bottom: 24px;
 }
-.btnGoogle {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    display: inline-flex;
-    align-items: center;
-    cursor: pointer;
-    background-color: #f6f7fb;
-    border-radius: 26px;
-    border: 0;
-    width: 122px;
-    height: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #000000;
-}
-.btnGoogle::before {
-    content: '';
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-
-    margin-right: 10px;
-    margin-left: 20px;
-    background-image: url(../../img/svg/Group.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-}
 .formLabel {
     display: flex;
     flex-direction: column;
@@ -108,9 +40,6 @@
     line-height: 12px;
     color: black;
 }
-.labelTextSecond {
-    text-align: left;
-}
 .formInput {
     outline: none;
     border: none;
@@ -118,10 +47,10 @@
     background-color: #f6f7fb;
     padding: 20px 17px;
 }
-
 .containerButton {
     display: flex;
     justify-content: space-between;
+    margin-top: 40px;
 }
 .button {
     width: 125px;
@@ -143,6 +72,40 @@
     filter: drop-shadow(1px 3px 5px rgba(255, 107, 8, 0.35));
     transition: 0.5s linear;
 }
-.animationGoogle {
-    text-align: center;
+.button:active {
+    background-color: #8a3d0d;
+}
+.modalContainerReg {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+/* Adaptive */
+@media screen and (min-width: 768px) {
+    .formRegistr {
+        z-index: 4;
+        width: 436px;
+        height: 535px;
+        top: -64%;
+        padding: 50px 85px 53px 85px;
+    }
+    .fontText {
+        margin: 5px 0 0 225px;
+        font-size: 16px;
+        line-height: 19px;
+    }
+    .promtText {
+        font-size: 12px;
+        line-height: 14px;
+    }
+    .labelText {
+        font-size: 12px;
+        line-height: 14px;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .formRegistr {
+        margin: 0;
+        top: -409px;
+        left: 75%;
+    }
 }
