--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -42,6 +42,14 @@
     width: 16px;
     height: 16px;
 }
+.logoutDoor {
+    width: 16px;
+    height: 16px;
+    margin-right: 15px;
+    border: none;
+    background-color: transparent;
+}
+
 .logoutBtn {
     width: 66px;
     height: 36px;
