--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -22,6 +22,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(82, 85, 95, 0.1);
+    z-index: 5;
 }
 .modalTxt {
     margin-top: 50px;
@@ -48,4 +49,11 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+    border-radius: 50px;
 }
+
+/* .close:hover {
+    background-color: var(--accent-color);
+    opacity: 0.8;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
