--- a/src/components/BackgroundHome/BackgroundHome.module.css
+++ b/src/components/BackgroundHome/BackgroundHome.module.css
@@ -17,7 +17,7 @@
 }
 .TopImg {
     position: absolute;
-    /* z-index: 2; */
+    z-index: 2;
     background-image: url('../../img/svg/Vector.svg');
     width: 83px;
     height: 89px;
@@ -46,7 +46,7 @@
         height: 526px;
     }
     .TopImg {
-        /* z-index: 2; */
+        z-index: 2;
         width: 100%;
         height: 232px;
         top: 28px;
