--- a/src/components/TransactionForm/TransactionForm.module.css
+++ b/src/components/TransactionForm/TransactionForm.module.css
@@ -1,4 +1,98 @@
 .transactionForm {
+    width: 300px;
+    height: 350px;
+    padding: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
+@media screen and (min-width: 768px) {
+    .inputsWrapper {
+        display: flex;
+        flex-direction: row;
+        width: 470px;
+        height: 44px;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
 .productInput {
+    padding-left: 20px;
+    width: 252px;
+    height: 44px;
+    border: 2px solid #fff;
+    border-radius: 16px;
+    background-color: var(--auth-input-bg);
+}
+.productInput::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.02em;
+    color: var(--select-main-txt);
+}
+
+@media screen and (min-width: 768px) {
+    .productInput {
+        width: 155px;
+        height: 40px;
+        border: 2px solid #fff;
+        border-radius: 16px 16px 16px 0;
+    }
+}
+.selectCategory {
+    width: 252px;
+    height: 44px;
+    border: 2px solid #fff;
+    border-radius: 16px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.167;
+
+    letter-spacing: 0.02em;
+
+    color: #52555f;
+    outline: none;
+    background-color: var(--auth-input-bg);
+}
+.sumWrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.sumInput {
+    margin-bottom: 85px;
+    margin-top: 30px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-right: 17px;
+    width: 125px;
+    height: 44px;
+    text-align: right;
+    border: 2px solid #ffffff;
+    border-radius: 22px 0px 0px 22px;
+    background-color: var(--auth-input-bg);
+}
+.sumInput::placeholder {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+
+    color: #000000;
+}
+.calcBtn {
+    margin-top: 30px;
+    width: 60px;
+    height: 44px;
+    border: 2px solid #ffffff;
+    border-radius: 22px 0px 0px 22px;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+    background-color: var(--auth-input-bg);
+}
+.wrapBtns {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
