--- a/src/components/TransactionForm/TransactionForm.module.css
+++ b/src/components/TransactionForm/TransactionForm.module.css
@@ -5,8 +5,13 @@
     margin-right: auto;
     margin-left: auto;
 }
+
 @media screen and (min-width: 768px) {
+    .transactionForm {
+        width: 604px;
+    }
     .inputsWrapper {
+        margin-bottom: 30px;
         display: flex;
         flex-direction: row;
         width: 470px;
@@ -34,13 +39,15 @@
 
 @media screen and (min-width: 768px) {
     .productInput {
-        width: 155px;
+        width: 160px;
         height: 40px;
-        border: 2px solid #fff;
-        border-radius: 16px 16px 16px 0;
+        border: 2px solid #c7ccdc;
+        border-radius: 16px 0 0 0;
+        background-color: #fff;
     }
 }
 .selectCategory {
+    padding-left: 20px;
     width: 252px;
     height: 44px;
     border: 2px solid #fff;
@@ -48,12 +55,20 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 1.167;
-
     letter-spacing: 0.02em;
-
-    color: #52555f;
+    color: var(--select-main-txt);
     outline: none;
     background-color: var(--auth-input-bg);
+}
+@media screen and (min-width: 768px) {
+    .selectCategory {
+        width: 160px;
+        height: 40px;
+        border: 2px solid #c7ccdc;
+        border-radius: 0;
+        background-color: #fff;
+        border-left: none;
+    }
 }
 .sumWrapper {
     display: flex;
@@ -79,8 +94,26 @@
     line-height: 1.167;
     letter-spacing: 0.02em;
     text-transform: uppercase;
-
     color: #000000;
+}
+@media screen and (min-width: 768px) {
+    .sumInput {
+        margin-bottom: 30px;
+        border: none;
+        width: 70px;
+        height: 40px;
+        padding-right: 0;
+        border-radius: 0;
+        border: 2px solid #c7ccdc;
+        border-left: none;
+        border-right: none;
+        background-color: #fff;
+    }
+    .sumInput::placeholder {
+        color: #c7ccdc;
+        font-weight: 400;
+        text-align: right;
+    }
 }
 .calcBtn {
     margin-top: 30px;
@@ -91,8 +124,29 @@
     transform: matrix(-1, 0, 0, 1, 0, 0);
     background-color: var(--auth-input-bg);
 }
+@media screen and (min-width: 768px) {
+    .calcBtn {
+        border: 2px solid #c7ccdc;
+        background-color: #fff;
+        width: 50px;
+        height: 40px;
+        border-right: none;
+        padding: 10px;
+    }
+}
 .wrapBtns {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+}
+@media screen and (min-width: 1280px) {
+    .transactionForm {
+        width: 1060px;
+        display: flex;
+        flex-direction: row;
+    }
+    .wrapBtns {
+        display: inline;
+        margin-right: 27px;
+    }
 }
