--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -3,6 +3,7 @@
     margin-left: 80px;
 }
 .form {
+    position: absolute;
     width: 300px;
     display: flex;
     display: flex;
@@ -121,7 +122,7 @@
 }
 
 .FormContent_button::before {
-    content: url(../../img//svg/google.svg);
+    content: url('../../images/google.svg');
     display: inline-flex;
     width: 18px;
     height: 18px;
