--- a/src/components/Buttons/Button/Button.module.css
+++ b/src/components/Buttons/Button/Button.module.css
@@ -22,3 +22,6 @@
     background-color: var(--accent-color);
     filter: drop-shadow(1px 3px 5px rgba(255, 107, 8, 0.35));
 }
+.Btn:not(:last-child) {
+    margin-right: 15px;
+}
