--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,15 @@
 .header {
     width: 100vw;
     height: 56px;
+
     padding: 0 20px;
     background-color: #fff;
 }
 .authHeader {
     width: 100vw;
     height: 56px;
-    padding: 0 20px;
+    padding: 12px 20px;
+
     background-color: #fff;
     display: flex;
     justify-content: space-between;
@@ -38,15 +40,13 @@
         margin-right: 10px;
     }
 }
-.logoutSvg {
-    width: 16px;
-    height: 16px;
-}
+
 .logoutDoor {
     width: 16px;
     height: 16px;
     margin-right: 15px;
     border: none;
+    cursor: pointer;
     background-color: transparent;
 }
 
