--- a/src/components/TransactionForm/TransactionForm.module.css
+++ b/src/components/TransactionForm/TransactionForm.module.css
@@ -23,13 +23,14 @@
 
 .productInput {
     padding-left: 20px;
+    padding-bottom: 6px;
     width: 252px;
     height: 44px;
     border: 2px solid #fff;
     border-radius: 16px;
     background-color: var(--auth-input-bg);
 }
-.productInput::placeholder {
+::placeholder {
     font-weight: 400;
     font-size: 12px;
     line-height: 1.167;
@@ -48,6 +49,7 @@
 }
 .selectCategory {
     padding-left: 20px;
+    padding-bottom: 3px;
     width: 252px;
     height: 44px;
     border: 2px solid #fff;
@@ -79,7 +81,7 @@
     margin-bottom: 85px;
     margin-top: 30px;
     padding-top: 12px;
-    padding-bottom: 12px;
+    padding-bottom: 16px;
     padding-right: 17px;
     width: 125px;
     height: 44px;
@@ -100,6 +102,7 @@
     .sumInput {
         margin-bottom: 30px;
         border: none;
+
         width: 70px;
         height: 40px;
         padding-right: 0;
@@ -113,6 +116,10 @@
         color: #c7ccdc;
         font-weight: 400;
         text-align: right;
+    }
+    .sumInput:focus-within {
+        outline: none;
+        border: 2px solid var(--accent-color);
     }
 }
 .calcBtn {
@@ -131,12 +138,12 @@
         width: 50px;
         height: 40px;
         border-right: none;
-        padding: 10px;
+        padding: 8px 10px 10px;
     }
 }
 .wrapBtns {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 @media screen and (min-width: 1280px) {
