--- a/src/index.css
+++ b/src/index.css
@@ -32,12 +32,37 @@
 
     --diagram-second-color: #ffdac0;
 }
-body {
-    background-color: #fff;
+html {
+    box-sizing: border-box;
 }
-
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+a {
+    text-decoration: none;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
 ul {
+    margin: 0;
+    padding: 0;
     list-style: none;
+}
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+input {
     padding: 0;
     margin: 0;
 }
