--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
     background-color: #fff;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.02em;
-
+}
 html {
     box-sizing: border-box;
 }
