--- a/src/index.css
+++ b/src/index.css
@@ -65,4 +65,13 @@ img {
 input {
     padding: 0;
     margin: 0;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
+}
+input:hover,
+input:focus {
+    border: 2px solid var(--accent-color);
+}
+button {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
