--- a/src/components/GoToReports/GoToReports.module.css
+++ b/src/components/GoToReports/GoToReports.module.css
@@ -8,7 +8,6 @@
     line-height: 1.17;
     text-align: right;
     letter-spacing: 0.04em;
-    color: rgba(82, 85, 95, 0.7);
     cursor: pointer;
 }
 
@@ -16,6 +15,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: rgba(82, 85, 95, 0.7);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
@@ -24,11 +25,12 @@
 }
 
 .icon {
-    margin-left: 15px;
+    margin-left: 10px;
     fill: var(--main-txt-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon:hover,
-.icon:focus {
+.link:hover .icon,
+.link:focus .icon {
     fill: var(--accent-color);
 }
