--- a/src/components/GoToReports/GoToReports.module.css
+++ b/src/components/GoToReports/GoToReports.module.css
@@ -1,7 +1,9 @@
 .button {
+    display: block;
     width: 154px;
     height: 24px;
-    padding: 0;
+    padding: 30px 0 0;
+    margin: 0 auto 40px;
     border: none;
     background-color: transparent;
     font-size: 12px;
@@ -33,4 +35,15 @@
 .link:hover .icon,
 .link:focus .icon {
     fill: var(--accent-color);
+}
+@media screen and (min-width: 768px) {
+    .button {
+        margin: 0 0 0 111px;
+        padding: 0;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .button {
+        margin: 0 0 0 205px;
+    }
 }
