--- a/src/components/GoBack/GoBack.module.css
+++ b/src/components/GoBack/GoBack.module.css
@@ -1,7 +1,8 @@
 .GoBackArrow {
     width: 30px;
     height: 30px;
-    margin-bottom: 17px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     border: none;
     background-color: transparent;
     cursor: pointer;
