--- a/src/components/TransactionForm/TransactionForm.module.css
+++ b/src/components/TransactionForm/TransactionForm.module.css
@@ -1,7 +1,7 @@
 .transactionForm {
     width: 300px;
     height: 350px;
-    padding: 15px;
+    padding: 0 15px 0;
     margin-right: auto;
     margin-left: auto;
 }
@@ -29,7 +29,7 @@
     line-height: 1.167;
     font-weight: 500;
     border: 2px solid #fff;
-    border-radius: 16px;
+    border-radius: 16px 16px 0 0;
     background-color: var(--auth-input-bg);
 }
 ::placeholder {
@@ -78,6 +78,7 @@
     .sumWrapper {
         display: flex;
         justify-content: center;
+        align-items: center;
     }
 }
 @media screen and (min-width: 768px) {
@@ -137,6 +138,7 @@
 }
 .calcBtn {
     position: relative;
+    margin-bottom: 85px;
     margin-top: 30px;
     width: 60px;
     height: 44px;
