--- a/src/index.css
+++ b/src/index.css
@@ -80,5 +80,7 @@ input:focus {
     border: 2px solid var(--accent-color);
 }
 button {
+    padding: 0;
+    margin: 0;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
