--- a/src/components/Buttons/GoToMainButton/GoToMainButton.module.css
+++ b/src/components/Buttons/GoToMainButton/GoToMainButton.module.css
@@ -12,7 +12,6 @@
     font-size: 12px;
     line-height: 1.167;
     letter-spacing: 0.04em;
-    color: rgba(82, 85, 95, 0.7);
     background-color: transparent;
 }
 @media screen and (min-width: 1280px) {
@@ -20,15 +19,18 @@
         margin-right: 158px;
     }
 }
-.btn:hover {
-    font-size: 12.5px;
-    font-weight: 450;
-    color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .svg {
     position: absolute;
     transform: translateY(-50%);
     top: 63%;
     left: -10%;
+}
+.link {
+    color: rgba(82, 85, 95, 0.7);
+}
+.link:hover {
+    font-size: 12.5px;
+    font-weight: 450;
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
