--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -3,6 +3,17 @@
     /* padding: 0 10px; */
     width: 100%;
 }
+.BottomImg {
+    /* position:fixed; */
+    /* z-index: -1; */
+    /* width: 100vw; */
+    height: 800px;
+    background-image: url('../../images/partcab.svg'),
+        url('../../images/bottomcab.svg'), url('../../images/rectangle.svg');
+    background-repeat: no-repeat;
+    background-size: 55px, 89px, contain;
+    background-position: top 104px right, left 35px bottom, top;
+}
 
 /* контейнер для mobile */
 @media screen and (min-width: 320px) {
