--- a/src/components/TransactionTable/TransactionTable.module.css
+++ b/src/components/TransactionTable/TransactionTable.module.css
@@ -5,7 +5,7 @@
     line-height: 1.17;
     letter-spacing: 0.04em;
     text-align: left;
-    background-color: #f5f6fb;
+    background-color: var(--main-bg);
     border-collapse: collapse;
     border-radius: 20px 20px 0 0;
 }
@@ -19,7 +19,7 @@
     align-items: center;
     letter-spacing: 0.02em;
     text-transform: uppercase;
-    color: #000000;
+    color: var(--main-title-color);
 }
 
 .date {
@@ -28,31 +28,36 @@
 }
 
 .description {
-    width: 195px;
+    max-width: 190px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .category {
-    width: 150px;
+    width: 140px;
+    text-align: center;
 }
 
 .sum {
-    width: 90px;
+    width: 100px;
+    text-align: right;
 }
 
 tbody .sum {
     font-weight: 700;
-    color: #e7192e;
+    color: var(--negative-num);
 }
 
 .tbody {
     background-color: #ffffff;
-    border-right: 2px solid #f4f6fb;
-    border-left: 2px solid #f4f6fb;
+    border-right: 2px solid var(--main-bg);
+    border-left: 2px solid var(--main-bg);
 }
 
 .tableRow {
     height: 40px;
-    border-bottom: 2px solid #f4f6fb;
+    border-bottom: 2px solid var(--main-bg);
 }
 
 .tableRow td {
@@ -60,24 +65,57 @@ tbody .sum {
 }
 
 .icon {
+    width: 70px;
     text-align: center;
 }
 
 .button {
+    width: 32px;
+    height: 32px;
     padding: 0;
+    border-radius: 50%;
     border: none;
     background-color: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 }
 .button:hover,
 .button:focus {
-    cursor: pointer;
+    background-color: var(--main-bg);
 }
 
 .basket {
-    fill: #52555f;
+    fill: var(--main-txt-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover .basket,
 .button:focus .basket {
-    fill: #e7192e;
+    fill: var(--negative-num);
+}
+
+@media screen and (min-width: 1280px) {
+    .transactionTable {
+        width: 760px;
+    }
+
+    .thead {
+        height: 40px;
+    }
+
+    .description {
+        max-width: 250px;
+    }
+
+    .category {
+        width: 120px;
+    }
+
+    .sum {
+        width: 150px;
+    }
+
+    .icon {
+        width: 120px;
+    }
 }
