--- a/src/components/GoBack/GoBack.module.css
+++ b/src/components/GoBack/GoBack.module.css
@@ -1,4 +1,6 @@
 .GoBackArrow {
+    position: absolute;
+    left: 5%;
     width: 30px;
     height: 30px;
     margin-top: 15px;
@@ -6,4 +8,7 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+}
+.wrap {
+    position: relative;
 }
