--- a/src/components/TransactionTable/TransactionTable.module.css
+++ b/src/components/TransactionTable/TransactionTable.module.css
@@ -1,5 +1,5 @@
 .transactionTable {
-    margin-top: 500px; /*этот марджин для того, что бы таблица попала на белый фон*/
+    margin-top: 48px;
     width: 605px;
     font-size: 12px;
     line-height: 1.17;
