--- a/src/components/CurrentPeriod/CurrentPeriod.module.css
+++ b/src/components/CurrentPeriod/CurrentPeriod.module.css
@@ -1,10 +1,10 @@
 .reviewMonth {
-    font-size: 12px;
-    line-height: 1.17;
     display: table-header-group;
     height: 39px;
     align-items: center;
     margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
 }
 
 .titleReviewMonth {
