--- a/src/components/TransactionForm/TransactionForm.module.css
+++ b/src/components/TransactionForm/TransactionForm.module.css
@@ -1,7 +1,7 @@
 .transactionForm {
     width: 300px;
-    height: 350px;
-    padding: 0 15px 0;
+
+    padding: 55px 15px 0;
     margin-right: auto;
     margin-left: auto;
 }
@@ -125,6 +125,7 @@
         border: 2px solid #c7ccdc;
         border-left: none;
         background-color: #fff;
+        z-index: -1;
     }
     .sumInput::placeholder {
         color: #c7ccdc;
