поправила верстку мейн пейдж

--- a/src/_pages/MainPage/MainPage.module.css
+++ b/src/_pages/MainPage/MainPage.module.css
@@ -1,6 +1,29 @@
+.balanceTabletWrapper {
+    display: flex;
+    flex-direction: row-reverse;
+}
 .btnMobileWrapper {
     position: fixed;
     display: flex;
 
     bottom: 0;
+}
+.transactionTabletDesktopWrapper {
+    display: flex;
+    flex-direction: column;
+    width: 665px;
+    height: 626px;
+    background-color: #fff;
+    box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
+    border-radius: 0px 30px 30px 30px;
+}
+@media screen and (min-width: 1280px) {
+    .transactionTabletDesktopWrapper {
+        width: 1060px;
+        height: 580px;
+    }
+    .transactionSummaryWrapper {
+        display: flex;
+        flex-direction: row;
+    }
 }
