--- a/src/components/Buttons/CostsAndIncomesButtons/CostsAndIncomesButton.module.css
+++ b/src/components/Buttons/CostsAndIncomesButtons/CostsAndIncomesButton.module.css
@@ -4,9 +4,6 @@
     font-weight: 700;
     font-size: 12px;
     line-height: 1.167;
-
-    /* display: flex;
-    align-items: center; */
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: uppercase;
@@ -19,4 +16,18 @@
 .btn:focus {
     color: var(--accent-btn-txt);
     background-color: var(--accent-color);
+}
+@media screen and (min-width: 768px) {
+    .btn {
+        width: 138px;
+        height: 40px;
+        border: none;
+        border-radius: 20px 20px 0 0;
+        background-color: #fafbfd;
+    }
+    .btn:hover,
+    .btn:focus {
+        color: var(--accent-color);
+        background-color: #fafbfd;
+    }
 }
