--- a/src/components/Summary/Summary.module.css
+++ b/src/components/Summary/Summary.module.css
@@ -1,7 +1,10 @@
 .summaryWrap {
     width: 230px;
     height: 278px;
+    margin-top: 48px;
+    margin-left: 20px;
     border-radius: 20px 20px 20px 0;
+    border: 2px solid #fff;
     background-color: var(--main-bg);
 }
 
