--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -1,4 +1,5 @@
 .dropdown {
+    position: relative;
     padding-left: 20px;
     padding-bottom: 3px;
     width: 252px;
@@ -14,6 +15,11 @@
     outline: none;
     background-color: var(--auth-input-bg);
 }
+.dropdownIcon {
+    position: absolute;
+    top: 40%;
+    right: 20px;
+}
 @media screen and (min-width: 768px) {
     .dropdown {
         width: 160px;
@@ -23,4 +29,26 @@
         background-color: #fff;
         border-left: none;
     }
+    .dropdownIcon {
+        position: absolute;
+        top: 40%;
+        right: 10px;
+    }
+    /* .mainOption {
+        position: absolute;
+        top: 97%;
+        left: 0;
+        width: 100%;
+        z-index: 2;
+        color: #c7ccdc;
+        background: #f5f6fb;
+        border: 2px solid #fff; */
 }
+/* .choosenOption {
+        display: flex;
+        align-items: center;
+        height: 32px;
+        padding-left: 20px;
+        cursor: pointer;
+        transition: all 0.2s;
+    } */
