--- a/src/components/Balance/Balance.module.css
+++ b/src/components/Balance/Balance.module.css
@@ -7,6 +7,7 @@
     justify-content: center;
 }
 .Input {
+    font-size: 12px;
     display: flex;
     text-align: center;
     align-items: center;
