--- a/src/components/CalendarForm/CalendarForm.module.css
+++ b/src/components/CalendarForm/CalendarForm.module.css
@@ -24,7 +24,7 @@
         margin-bottom: 0px;
         padding-top: 10px;
 
-        border: 1px solid #fff;
+        border: 1px solid #f5f6fb;
         justify-content: start;
     }
 }
