--- a/src/_pages/MainPage/MainPage.module.css
+++ b/src/_pages/MainPage/MainPage.module.css
@@ -1,6 +1,12 @@
-.balanceTabletWrapper {
+.balanceWrapper {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+    .balanceWrapper {
+        display: flex;
+        flex-direction: row-reverse;
+    }
 }
 .btnMobileWrapper {
     position: fixed;
