--- a/src/components/CalendarForm/CalendarForm.module.css
+++ b/src/components/CalendarForm/CalendarForm.module.css
@@ -1,29 +1,26 @@
-@media screen and (min-width: 320px) {
-    .calendarWrapper {
-        width: 280px;
-        height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
+.calendarWrapper {
+    width: 280px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    font-weight: 900;
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+}
 
-        font-weight: 900;
-        font-size: 12px;
-        line-height: 14px;
-
-        cursor: pointer;
-    }
-    .calendarOverley {
-        margin-left: 10px;
-    }
+.calendarOverlay {
+    margin-right: 10px;
+    margin-top: 0;
 }
 
 @media screen and (min-width: 768px) {
     .calendarWrapper {
-        margin-bottom: 0px;
-        padding-top: 10px;
-
-        border: 1px solid #f5f6fb;
+        margin-top: 0;
+        margin-right: 10px;
         justify-content: start;
     }
 }
@@ -36,5 +33,6 @@
         justify-content: center;
         align-items: center;
         margin-left: 0;
+        margin-right: 25px;
     }
 }
