--- a/src/components/CalendarPicker/CalendarPicker.module.css
+++ b/src/components/CalendarPicker/CalendarPicker.module.css
@@ -1,26 +1,27 @@
-@media screen and (min-width: 320px) {
-    .pickerWrapper {
-        position: absolute;
-        margin: 20px -90px;
-        width: fit-content;
-        background-color: white;
-        z-index: 2;
-        border-radius: 20px;
-        text-align: center;
-        border: 1px solid #f5f6fb;
-    }
+.pickerWrapper {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: fit-content;
+    background-color: #fff;
+    z-index: 2;
+    border-radius: 20px;
+    text-align: center;
+    border: 1px solid #f5f6fb;
 }
 
 @media screen and (min-width: 768px) {
     .pickerWrapper {
         position: absolute;
-        margin: 10px 0px;
+        /* margin: 10px 0px; */
+        top: 65%;
+        left: 50%;
         width: 40%;
-        background-color: white;
+        background-color: #fff;
         z-index: 2;
         border-radius: 20px;
         text-align: center;
-        border: 1px solid #f5f6fb;
     }
 }
 @media screen and (min-width: 1240px) {
