--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -15,11 +15,22 @@
     outline: none;
     background-color: var(--auth-input-bg);
 }
+
+.mainOption {
+    position: relative;
+    height: 40px;
+    padding: 15px 20px;
+    color: #c7ccdc;
+    background: #f5f6fb;
+    border-radius: 0 0 16px 0;
+    cursor: pointer;
+}
 .dropdownIcon {
     position: absolute;
     top: 40%;
     right: 20px;
 }
+
 @media screen and (min-width: 768px) {
     .dropdown {
         width: 160px;
@@ -28,6 +39,49 @@
         border-radius: 0;
         background-color: #fff;
         border-left: none;
+    }
+    .mainOption {
+        position: relative;
+        height: 35px;
+        padding: 12px 0 0 0;
+        color: #c7ccdc;
+        background-color: #fff;
+        border-radius: 0 0 16px 0;
+        cursor: pointer;
+        outline: none;
+    }
+    .dropdown:hover,
+    .dropdown:focus {
+        border: 2px solid var(--accent-color);
+    }
+    .mainOption:hover,
+    .mainOption:focus {
+        color: var(--accent-color);
+        font-weight: 600;
+    }
+    .optionsList {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        z-index: 2;
+        color: #c7ccdc;
+        background: #fff;
+        border: 2px solid #f5f6fb;
+        box-shadow: 0px 3px 4px rgba(170, 178, 197, 0.4);
+    }
+    .choosenOption {
+        display: flex;
+        align-items: center;
+        height: 32px;
+        padding-left: 20px;
+        cursor: pointer;
+        transition: all 0.2s;
+    }
+    .choosenOption:hover {
+        font-weight: 600;
+        color: var(--accent-color);
+        background-color: #f5f6fb;
     }
     .dropdownIcon {
         position: absolute;
